# utils

./: README.md  install.sh  pyproject.toml
bash_scripts/: clear-docker.sh  python-ctrl.sh
python_scripts/: generate_password.py
src/: generate_password.py
tests/: __init__.py  test_generate_password.py
